<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2017 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Slouchr</string>
    <string name="enable_reminders_button_text">Enable Reminders</string>
    <string name="disable_reminders_button_text">Disable Reminders</string>
    <string name="work_duration">Remind me every</string>
    <string name="work_duration_units">minutes</string>
    <string name="reminders_disabled">Disabling reminders</string>
    <string name="default_duration_time">15</string>


    <string name="notification_channel_default">Primary Channel</string>
    <string name="min_reminder_exceeded">Reminders cannot be more often than every 15 minutes</string>
    <string name="reminders_enabled">Enabling reminders</string>
    <string name="notification_title">Straighten Up</string>
    <string name="notification_body">straighten up yo</string>
    <string name="RecurringMinutesVariable">DEFAULT_RECURRING_MINUTES</string>
    <string name="title_activity_new_event">NewEventActivity</string>
</resources>
