<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/duration_time_label2"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:labelFor="@id/duration_time"
            android:text="@string/work_duration_units"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/duration_time"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/duration_time"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_duration_time"
            android:textAlignment="center"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/duration_time_label"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/duration_time_label"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:labelFor="@id/duration_time"
            android:text="@string/work_duration"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/enable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_reminders_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/disable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/disable_reminders_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enable_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="15dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="307dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="128dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>