<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_params"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/textview_bottom_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/textview_margin"
                android:textSize="@dimen/large_text_size" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/table_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:labelFor="@id/duration_time"
                        android:gravity="end|center_vertical"
                        android:text="@string/work_duration"
                        android:textSize="@dimen/default_text_size" />

                    <EditText
                        android:id="@+id/duration_time"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/default_duration_time" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/enable_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_top_margin"
                android:layout_marginLeft="@dimen/button_horizontal_margins"
                android:layout_marginRight="@dimen/button_horizontal_margins"
                android:text="@string/enable_reminders_button_text" />
            <Button
                android:id="@+id/disable_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_horizontal_margins"
                android:layout_marginRight="@dimen/button_horizontal_margins"
                android:text="@string/disable_reminders_button_text" />

        </LinearLayout>
    </ScrollView>
</layout>
